# pg_ask

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yaml  index.html  install.sh  manifest.json
.github/instructions/: copilot-instructions.md
.github/pages/: download-artifacts.js  generate-manifest.py  index.html  manifest.json
.github/workflows/: build-and-release.yml  publish-pages.yml
cpp_sanboc/: CMakeLists.txt
cpp_sanboc/src/: main.cpp
docker/: Dockerfile  Dockerfile.minimal  Dockerfile.pg_ask  init-extension.sql
include/: ai_client.hpp  ai_engine.h  explorer.h  factory.hpp  prompt_builder.hpp  schema_loader.hpp  sql_executor.hpp
pg/: pg_ask--1.0.sql  pg_ask.control
releases/linux-x86_64/: pg_ask--1.0.sql
scripts/: install.ps1  install.sh
src/: ai_engine.cpp  explorer.cpp  main.cpp  pg_ask.cpp
